# Wired

./: README.md  build.bat  build.sh
src/: CMakeLists.txt  CMakePresets.json
src/WiredEditor/: CMakeLists.txt  Driver.cpp  EditorClient.cpp  EditorClient.h  EditorResources.cpp  EditorResources.h  GridLogic.h
src/WiredEditor/Package/: PackageUtil.cpp  PackageUtil.h
src/WiredEditor/PopUp/: NewPackageDialog.h  NewSceneDialog.h  ProgressDialog.h
src/WiredEditor/View/: MainDockSpace.h  MainMenuBar.h  RenderOutputView.cpp  RenderOutputView.h  TextureView.h
src/WiredEditor/ViewModel/: AssetsWindowVM.cpp  AssetsWindowVM.h  MainWindowVM.cpp  MainWindowVM.h
src/WiredEditor/Window/: AssetViewWindow.cpp  AssetViewWindow.h  AssetsWindow.cpp  AssetsWindow.h  FPSWindow.h  MainWindow.cpp  MainWindow.h  NodeEditorWindow.cpp  NodeEditorWindow.h  PackageWindow.h  SceneWindow.cpp  SceneWindow.h  ViewportWindow.cpp  ViewportWindow.h
src/WiredEngine/: CMakeLists.txt  Config.cmake.in
src/WiredEngine/NEONCommon/: CMakeLists.txt
src/WiredEngine/NEONCommon/src/: ImageData.cpp  Timer.cpp
src/WiredEngine/NEONCommon/src/Log/: StdLogger.cpp
src/WiredEngine/NEONCommon/src/Metrics/: InMemoryMetrics.cpp
src/WiredEngine/NEONCommon/src/Space/: Blit.cpp
src/WiredEngine/NEONCommon/src/Thread/: MessageDrivenThreadPool.cpp  ThreadUtil.cpp
src/WiredEngine/NEONCommonTests/: CMakeLists.txt  Driver.cpp  SpaceUtilTests.h
src/WiredEngine/WiredDesktop/: CMakeLists.txt
src/WiredEngine/WiredDesktop/src/: DesktopEngine.cpp  DesktopFiles.cpp  DesktopFiles.h  DesktopSurfaceAccess.cpp  DesktopSurfaceAccess.h
src/WiredEngine/WiredEngine/: CMakeLists.txt
src/WiredEngine/WiredEngine/src/: Client.cpp  EngineAccess.cpp  EngineAccess.h  EngineBuilder.cpp  HeightMap.cpp  HeightMap.h  HeightMapUtil.cpp  HeightMapUtil.h  InternalIds.h  Packages.cpp  Packages.h  Resources.cpp  Resources.h  RunState.cpp  RunState.h  SpaceUtil.cpp  WiredEngine.cpp  WiredEngine.h  WorkThreadPool.cpp  WorkThreadPool.h  WorkThreadPoolInternal.h
src/WiredEngine/WiredEngine/src/Audio/: AudioManager.cpp  AudioManager.h  AudioUtil.cpp  AudioUtil.h
src/WiredEngine/WiredEngine/src/Font/: FontManager.cpp  FontManager.h
src/WiredEngine/WiredEngine/src/Model/: AssimpUtil.h  LoadedModel.h  ModelLoader.cpp  ModelLoader.h  ModelPose.h  ModelView.cpp  ModelView.h
src/WiredEngine/WiredEngine/src/Package/: Conversion.cpp  DiskPackageSource.cpp  PackageCommon.cpp  Serialization.cpp
src/WiredEngine/WiredEngine/src/Physics/: IPhysics.h  JoltCharacterController.cpp  JoltCharacterController.h  JoltCommon.h  JoltPhysics.cpp  JoltPhysics.h  JoltScene.cpp  JoltScene.h  PhysicsInternal.h
src/WiredEngine/WiredEngine/src/Player/: FirstPersonPlayerController.cpp
src/WiredEngine/WiredEngine/src/Util/: PerlinNoise.cpp
src/WiredEngine/WiredEngine/src/World/: AudioStateComponent.h  AudioSystem.cpp  AudioSystem.h  Camera2D.cpp  Camera3D.cpp  Components.cpp  IWorldSystem.h  ModelAnimatorSystem.cpp  ModelAnimatorSystem.h  PhysicsStateComponent.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderableStateComponent.h  RendererSyncer.cpp  RendererSyncer.h  WorldState.cpp  WorldState.h
src/WiredEngine/WiredGPU/: CMakeLists.txt
src/WiredEngine/WiredGPUVk/: CMakeLists.txt
src/WiredEngine/WiredGPUVk/src/: Common.h  GPUVkIds.h  Global.h  PassState.cpp  PassState.h  Timestamps.cpp  Timestamps.h  UsageTracker.h  Usages.h  VMA.h  VMAImpl.cpp  VulkanCalls.h  VulkanCallsUtil.cpp  VulkanCallsUtil.h  WiredGPUVkBuilder.cpp  WiredGPUVkImpl.cpp  WiredGPUVkImpl.h
src/WiredEngine/WiredGPUVk/src/Buffer/: BufferAllocation.h  BufferCommon.h  BufferDef.h  Buffers.cpp  Buffers.h  GPUBuffer.h  UniformBuffers.cpp  UniformBuffers.h
src/WiredEngine/WiredGPUVk/src/Descriptor/: DescriptorPools.cpp  DescriptorPools.h  DescriptorSets.cpp  DescriptorSets.h
src/WiredEngine/WiredGPUVk/src/Frame/: Frame.cpp  Frame.h  Frames.cpp  Frames.h
src/WiredEngine/WiredGPUVk/src/Image/: GPUImage.h  ImageAllocation.h  ImageCommon.h  ImageDef.h  ImageViewDef.h  Images.cpp  Images.h
src/WiredEngine/WiredGPUVk/src/Pipeline/: Layouts.cpp  Layouts.h  VkPipelineConfig.h  VkPipelines.cpp  VkPipelines.h
src/WiredEngine/WiredGPUVk/src/Sampler/: VkSamplers.cpp  VkSamplers.h
src/WiredEngine/WiredGPUVk/src/Shader/: Shaders.cpp  Shaders.h
src/WiredEngine/WiredGPUVk/src/State/: CommandBuffer.cpp  CommandBuffer.h  CommandBuffers.cpp  CommandBuffers.h
src/WiredEngine/WiredGPUVk/src/Util/: RenderPassAttachment.h  SPVUtil.h  SpaceUtil.h  SyncPrimitives.cpp  SyncPrimitives.h  VMAUtil.cpp  VMAUtil.h  VulkanUtil.h
src/WiredEngine/WiredGPUVk/src/Vulkan/: SurfaceSupportDetails.cpp  VulkanDevice.h  (+32 more)
src/WiredEngine/WiredPlatform/: CMakeLists.txt
src/WiredEngine/WiredPlatformSDL/: CMakeLists.txt
src/WiredEngine/WiredPlatformSDL/src/: SDLEventUtil.h  SDLEvents.cpp  SDLImage.cpp  SDLKeyboardState.cpp  SDLKeyboardState.h  SDLLogger.cpp  SDLText.cpp  SDLUtil.cpp  SDLUtil.h  SDLWindow.cpp
src/WiredEngine/WiredRenderer/: CMakeLists.txt
src/WiredEngine/WiredRenderer/src/: AABB.cpp  ExecuteOnDestruct.cpp  ExecuteOnDestruct.h  GPUBuffer.cpp  GPUBuffer.h  Global.h  Group.cpp  Group.h  GroupLights.cpp  GroupLights.h  Groups.cpp  Groups.h  ItemBuffer.h  Materials.cpp  Materials.h  Meshes.cpp  Meshes.h  Pipelines.cpp  Pipelines.h  RenderSettings.cpp  Renderer.cpp  Renderer.h  RendererBuilder.cpp  RendererIds.h  Rotation.cpp  Samplers.cpp  Samplers.h  Textures.cpp  Textures.h  TransferBufferPool.cpp  TransferBufferPool.h  VectorUtil.cpp  Volume.cpp
src/default_shaders/: FXAA.comp  FXAA.comp.spv  SkyBox.frag  SkyBox.frag.spv  SkyBox.vert  SkyBox.vert.spv  color_correction.comp  color_correction.comp.spv  mesh.vert  mesh.vert.spv  mesh_bone.vert  mesh_bone.vert.spv  mesh_pbr.frag  mesh_pbr.frag.spv  mesh_shadow.frag  mesh_shadow.frag.spv  object_cull.comp  object_cull.comp.spv  object_draw.comp  object_draw.comp.spv  sprite.frag  sprite.frag.spv  sprite.vert  sprite.vert.spv  sprite_cull.comp  sprite_cull.comp.spv  sprite_draw.comp  sprite_draw.comp.spv  volumetric_lighting.comp  volumetric_lighting.comp.spv
(+220 files in other folders)
